--- a/PrimeVue/app/package.json
+++ b/PrimeVue/app/package.json
@@ -14,16 +14,21 @@
     "core-js": "^3.8.3",
     "diagram-js": "^14.0.0",
     "diagram-js-grid": "^1.0.0",
+    "g8-xml-edit": "^0.0.1",
+    "highlight.js": "^11.0.1",
     "jquery": "^3.7.1",
     "lz-string": "1.4.4",
     "min-dash": "^4.2.1",
     "min-dom": "^4.1.0",
+    "pretty-data": "^0.40.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.49.1",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vue3-xml-viewer": "^0.0.14",
+    "vuex": "^4.0.0",
+    "xml-formatter": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
