--- a/PrimeVue/app/package.json
+++ b/PrimeVue/app/package.json
@@ -13,7 +13,9 @@
     "bpmn-js-token-simulation": "^0.34.0",
     "core-js": "^3.8.3",
     "diagram-js": "^14.0.0",
+    "diagram-js-direct-editing": "^2.1.2",
     "diagram-js-grid": "^1.0.0",
+    "diagram-js-minimap": "^4.1.0",
     "g8-xml-edit": "^0.0.1",
     "highlight.js": "^11.9.0",
     "jquery": "^3.7.1",
